Updated Makefile to use new stubs for EVP_MD_XTX_free and evp_md_ctx_is_valid to improve coverage

--- a/.cbmc-batch/jobs/aws_cryptosdk_md_update/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_md_update/Makefile
@@ -17,7 +17,8 @@ sinclude ../Makefile.local
 #otherwise, use the default values
 include ../Makefile.local_default
 
-UNWINDSET += 
+ABSTRACTIONS += $(SRCDIR)/helper-stubs/EVP_MD_CTX_free_stub.c
+ABSTRACTIONS += $(SRCDIR)/helper-stubs/evp_md_ctx_is_valid_stub.c
 
 # Adds check for memory leaks for this proof
 # Turning this flag on globally would require all proofs to carefully release objects, which they don't do.
@@ -35,6 +36,11 @@ DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/bn_override.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/ec_override.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/evp_override.goto
+
+REMOVE_FUNCTION_BODIES += --remove-function-body EVP_MD_CTX_free
+REMOVE_FUNCTION_BODIES += --remove-function-body evp_md_ctx_is_valid
+
+UNWINDSET +=
 
 ###########
 
