--- a/.cbmc-batch/jobs/Makefile.common
+++ b/.cbmc-batch/jobs/Makefile.common
@@ -132,7 +132,7 @@ REMOVE_FUNCTION_BODY += --remove-function-body abort
 ################################################################
 
 REMOVE_FUNCTION_BODY += $(ADDITIONAL_REMOVE_FUNCTION_BODY)
-DEPENDENT_GOTOS = $(patsubst %.c,%.goto,$(DEPENDENCIES))
+DEPENDENT_GOTOS = $(patsubst %.c,willthismergeconflict%.goto,$(DEPENDENCIES))
 
 ################################################################
 # makes a symlink if one doesn't already exist
