--- a/.cbmc-batch/jobs/aws_cryptosdk_md_abort/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_md_abort/Makefile
@@ -17,8 +17,10 @@ sinclude ../Makefile.local
 #otherwise, use the default values
 include ../Makefile.local_default
 
-ABSTRACTIONS += $(SRCDIR)/helper-stubs/EVP_MD_CTX_free_stub.c
-ABSTRACTIONS += $(SRCDIR)/helper-stubs/evp_md_ctx_is_valid_stub.c
+# We abstract these functions as manual inspection shows there is no pkey associated with the MD_ctx.
+
+ABSTRACTIONS += $(SRCDIR)/helper-stubs/EVP_MD_CTX_free_no_pkey_stub.c
+ABSTRACTIONS += $(SRCDIR)/helper-stubs/evp_md_ctx_is_valid_no_pkey_stub.c
 
 # Adds check for memory leaks for this proof
 # Turning this flag on globally would require all proofs to carefully release objects, which they don't do.
@@ -35,9 +37,6 @@ DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/bn_override.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/ec_override.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/evp_override.goto
-
-REMOVE_FUNCTION_BODIES += --remove-function-body EVP_MD_CTX_free
-REMOVE_FUNCTION_BODIES += --remove-function-body evp_md_ctx_is_valid
 
 UNWINDSET +=
 
