Added comments about abstractions and removed REMOVE_FUNCTION_BODIES

--- a/.cbmc-batch/jobs/aws_cryptosdk_md_update/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_md_update/Makefile
@@ -17,6 +17,7 @@ sinclude ../Makefile.local
 #otherwise, use the default values
 include ../Makefile.local_default
 
+# We abstract these functions as manual inspection shows there is no pkey associated with the MD_ctx.
 ABSTRACTIONS += $(SRCDIR)/helper-stubs/EVP_MD_CTX_free_no_pkey_stub.c
 ABSTRACTIONS += $(SRCDIR)/helper-stubs/evp_md_ctx_is_valid_no_pkey_stub.c
 
@@ -36,9 +37,6 @@ DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/bn_override.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/ec_override.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/evp_override.goto
-
-REMOVE_FUNCTION_BODIES += --remove-function-body EVP_MD_CTX_free
-REMOVE_FUNCTION_BODIES += --remove-function-body evp_md_ctx_is_valid
 
 UNWINDSET +=
 
