feat!: Updates to the AWS Encryption SDK
This change includes fixes for issues that were reported by Thai Duong
from Google's Security team, and for issues that were identified by AWS
Cryptography.

See: https://docs.aws.amazon.com/encryption-sdk/latest/developer-guide/migration.html

BREAKING CHANGE: AWS KMS KeyIDs must be specified explicitly or
Discovery mode explicitly chosen. Key committing suites are now default.
CommitmentPolicy requires commitment by default.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -70,6 +70,10 @@ if (BUILD_AWS_ENC_SDK_CPP)
           $ENV{AWS_ENC_SDK_EXAMPLE_KEY_ARN} ${CMAKE_CURRENT_SOURCE_DIR}/example_data/aes_256_key)
         aws_add_test(example_string ${CMAKE_CURRENT_BINARY_DIR}/string
           $ENV{AWS_ENC_SDK_EXAMPLE_KEY_ARN})
+        aws_add_test(example_string_alternate_algorithm_suite ${CMAKE_CURRENT_BINARY_DIR}/string_alternate_algorithm_suite
+          $ENV{AWS_ENC_SDK_EXAMPLE_KEY_ARN})
+        aws_add_test(example_string_legacy_compatibility ${CMAKE_CURRENT_BINARY_DIR}/string_legacy_compatibility
+          $ENV{AWS_ENC_SDK_EXAMPLE_KEY_ARN})
 
         set_tests_properties(example_file_streaming PROPERTIES FIXTURES_REQUIRED Examples)
     endif()
