fixed keyring_trace_add_record_buf and keyring_on_encrypt

--- a/.cbmc-batch/jobs/aws_cryptosdk_keyring_on_encrypt/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_keyring_on_encrypt/Makefile
@@ -47,6 +47,7 @@ DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.c
 
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/array_list.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/atomics.c
+DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/error.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/math.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/string.c
 
