--- a/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_add_record_buf/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_add_record_buf/Makefile
@@ -25,6 +25,7 @@ ENTRY = aws_cryptosdk_keyring_trace_add_record_buf_harness
 DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/make_common_data_structures.c
 DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/proof_allocators.c
 DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/utils.c
+DEPENDENCIES +=	$(SRCDIR)/c-common-helper-stubs/memcpy_override_havoc.c
 DEPENDENCIES +=	$(SRCDIR)/c-common-src/array_list.c
 DEPENDENCIES +=	$(SRCDIR)/c-common-src/byte_buf.c
 DEPENDENCIES +=	$(SRCDIR)/c-common-src/common.c
@@ -33,7 +34,6 @@ DEPENDENCIES +=	$(SRCDIR)/c-common-src/string.c
 DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/cipher.c
 DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/keyring_trace.c
 DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/utils.c
-DEPENDENCIES += $(COMMON_HELPERDIR)/stubs/memcpy_override_havoc.c
 DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
 
 
