--- a/.cbmc-batch/jobs/aws_cryptosdk_aes_gcm_decrypt/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_aes_gcm_decrypt/Makefile
@@ -26,10 +26,10 @@ CBMCFLAGS +=
 
 ENTRY = aws_cryptosdk_aes_gcm_decrypt_harness
 
-DEPENDENCIES += $(COMMON_HELPERDIR)/stubs/memcpy_override_havoc.goto
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.goto
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.goto
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.goto
+DEPENDENCIES += $(SRCDIR)/c-common-helper-stubs/memcpy_override_havoc.goto
 DEPENDENCIES += $(SRCDIR)/c-common-src/byte_buf.goto
 DEPENDENCIES += $(SRCDIR)/c-common-src/common.goto
 DEPENDENCIES += $(SRCDIR)/c-common-src/error.goto
