Added non-NULL assumptions to keyring_base_init harness for vtable name
modified aws_atomic_var_is_valid check

Fixed IMPLIES structure of assume

Fix comment structure in cmm_base_init harness

aws_atomic_var_is_valid divided into two functions, one for int and one for ptr, preconditions added to source code

Updated Makefile to include MAX_STRING_LEN

update to keyring_on_encrypt and keyring_on_decrypt proof harnesses

--- a/.cbmc-batch/jobs/aws_cryptosdk_keyring_on_decrypt/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_keyring_on_decrypt/Makefile
@@ -49,6 +49,7 @@ DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/array_list.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/atomics.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/math.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/string.c
+DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/error.c
 
 DEPENDENCIES += $(SRCDIR)/c-common-src/array_list.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/byte_buf.c
