--- a/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_copy_all/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_copy_all/Makefile
@@ -51,5 +51,6 @@ REMOVE_FUNCTION_BODIES += --remove-function-body aws_array_list_is_valid
 
 UNWINDSET += __CPROVER_file_local_list_utils_c_list_copy_all.5:$(call addone,$(NUM_ELEMS))
 UNWINDSET += __CPROVER_file_local_list_utils_c_list_copy_all.6:$(call addone,$(NUM_ELEMS))
+UNWINDSET += ensure_trace_has_readable_records.0:$(call addone,$(NUM_ELEMS))
 ###########
 include ../Makefile.common
