--- a/.cbmc-batch/jobs/aws_cryptosdk_sig_get_privkey/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_sig_get_privkey/Makefile
@@ -26,6 +26,7 @@ CBMCFLAGS += --memory-leak-check
 ENTRY = aws_cryptosdk_sig_get_privkey_harness
 
 DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/proof_allocators.goto
+DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/make_common_data_structures.goto
 DEPENDENCIES +=	$(SRCDIR)/c-common-src/byte_buf.goto
 DEPENDENCIES +=	$(SRCDIR)/c-common-src/common.goto
 DEPENDENCIES +=	$(SRCDIR)/c-common-src/error.goto
