Updates to aws_atomic_var_is_valid and aws_cryptosdk_keyring_base_init harness (#607)
* Make c-common a submodule for verification, and update the CBMC makefile to point at it

* Update c-common to latest, and update the makefile to match

* fixed keyring_trace_add_record_buf and keyring_on_encrypt

* push c-common again, and fix makefile for aws_gcm_decypt

* Added non-NULL assumptions to keyring_base_init harness for vtable name

modified aws_atomic_var_is_valid check

Fixed IMPLIES structure of assume

Fix comment structure in cmm_base_init harness

aws_atomic_var_is_valid divided into two functions, one for int and one for ptr, preconditions added to source code

Updated Makefile to include MAX_STRING_LEN

update to keyring_on_encrypt and keyring_on_decrypt proof harnesses

* Added the ensure_vtable_has_allocated_members function

* Use ensures function in the harness as well as bounded malloc

* removed unneeded assumption on refcount.value

* Removed stubs from Makefile

* use malloc and ensure_vtable_has_allocated_members

* Use new ensure_nondet_allocate_vtable_members function

* Made two vtable allocator functions, for keyring_trace and cmm

Co-authored-by: Daniel Schwartz-Narbonne <dsn@amazon.com>

--- a/.cbmc-batch/jobs/aws_cryptosdk_keyring_on_decrypt/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_keyring_on_decrypt/Makefile
@@ -35,12 +35,6 @@ CBMCFLAGS +=
 ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/error.c
 ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/aws_array_list_defined_type.c
 
-ABSTRACTIONS += $(LINKFARM)/helper-stubs/aws_atomic_load_int.c
-REMOVE_FUNCTION_BODY += --remove-function-body aws_atomic_load_int
-
-ABSTRACTIONS += $(LINKFARM)/helper-stubs/aws_atomic_load_ptr.c
-REMOVE_FUNCTION_BODY += --remove-function-body aws_atomic_load_ptr
-
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.c
@@ -49,6 +43,7 @@ DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/array_list.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/atomics.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/math.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/string.c
+DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/error.c
 
 DEPENDENCIES += $(SRCDIR)/c-common-src/array_list.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/byte_buf.c
