remove memory leak check from Makefile
remove memory clean up

moved assumptions about non-NULL elems

remove memory leak check from .yaml

Added comment about non-NULL assumption in hash_elems

--- a/.cbmc-batch/jobs/aws_cryptosdk_sig_get_privkey/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_sig_get_privkey/Makefile
@@ -20,8 +20,7 @@ include ../Makefile.local_default
 ## At the moment this is not used in the Makefile.common of encryption-sdk
 UNWINDSET +=
 
-# Added check for memory leaks
-CBMCFLAGS += --memory-leak-check
+CBMCFLAGS +=
 
 ENTRY = aws_cryptosdk_sig_get_privkey_harness
 
