--- a/.cbmc-batch/jobs/aws_cryptosdk_enc_ctx_serialize/cbmc-batch.yaml
+++ b/.cbmc-batch/jobs/aws_cryptosdk_enc_ctx_serialize/cbmc-batch.yaml
@@ -1,4 +1,4 @@
-cbmcflags: "--bounds-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--unwindset;array_list_item_generator.0:3,aws_cryptosdk_enc_ctx_serialize.0:3;--object-bits;8"
-expected: "SUCCESSFUL"
-goto: aws_cryptosdk_enc_ctx_serialize_harness.goto
-jobos: ubuntu16
+:
+  This file marks this directory as containing a CBMC proof. This file
+  is automatically clobbered in CI and replaced with parameters for
+  running the proof.
