Updated time comment in Makefile

--- a/.cbmc-batch/jobs/aws_cryptosdk_edk_list_copy_all/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_edk_list_copy_all/Makefile
@@ -19,7 +19,7 @@ include ../Makefile.local_default
 
 #########
 # Local vars
-NUM_ELEMS = 2 #Time on my laptop is 1 minute, 45 seconds
+NUM_ELEMS = 2 # Expected runtime is 2min. 
 
 #########
 ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/error.c
