--- a/.cbmc-batch/jobs/aws_cryptosdk_enc_ctx_clean_up/cbmc-batch.yaml
+++ b/.cbmc-batch/jobs/aws_cryptosdk_enc_ctx_clean_up/cbmc-batch.yaml
@@ -1,4 +1,4 @@
-cbmcflags: "--flush;--bounds-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--unwindset;aws_hash_table_clear.0:5,memset_override_0_impl.0:23;--object-bits;8"
+cbmcflags: "--flush;--bounds-check;--conversion-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--pointer-primitive-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwinding-assertions;--malloc-may-fail;--malloc-fail-null;--unwind;1;--unwindset;aws_hash_table_clear.0:5,memset_override_0_impl.0:23;--object-bits;8"
 expected: "SUCCESSFUL"
 goto: aws_cryptosdk_enc_ctx_clean_up_harness.goto
 jobos: ubuntu16
