--- a/.cbmc-batch/jobs/aws_cryptosdk_enc_ctx_deserialize/cbmc-batch.yaml
+++ b/.cbmc-batch/jobs/aws_cryptosdk_enc_ctx_deserialize/cbmc-batch.yaml
@@ -1,4 +1,4 @@
-jobos: ubuntu16
-cbmcflags: "--bounds-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--unwindset;aws_cryptosdk_enc_ctx_deserialize.0:3;--object-bits;8"
-goto: aws_cryptosdk_enc_ctx_deserialize_harness.goto
+cbmcflags: "--flush;--bounds-check;--conversion-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--pointer-primitive-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwinding-assertions;--malloc-may-fail;--malloc-fail-null;--unwind;1;--unwindset;aws_cryptosdk_enc_ctx_deserialize.0:3;--object-bits;8"
 expected: "SUCCESSFUL"
+goto: aws_cryptosdk_enc_ctx_deserialize_harness.goto
+jobos: ubuntu16
