--- a/.cbmc-batch/jobs/aws_cryptosdk_sig_update/cbmc-batch.yaml
+++ b/.cbmc-batch/jobs/aws_cryptosdk_sig_update/cbmc-batch.yaml
@@ -1,4 +1,4 @@
-jobos: ubuntu16
-cbmcflags: "--memory-leak-check;--bounds-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--object-bits;8"
-goto: aws_cryptosdk_sig_update_harness.goto
+cbmcflags: "--memory-leak-check;--flush;--bounds-check;--conversion-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--pointer-primitive-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwinding-assertions;--malloc-may-fail;--malloc-fail-null;--object-bits;8"
 expected: "SUCCESSFUL"
+goto: aws_cryptosdk_sig_update_harness.goto
+jobos: ubuntu16
