--- a/.cbmc-batch/jobs/aws_cryptosdk_enc_ctx_deserialize/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_enc_ctx_deserialize/Makefile
@@ -41,6 +41,7 @@ DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-stubs/error.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/byte_buf.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/common.c
+DEPENDENCIES += $(SRCDIR)/c-common-src/hash_table.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/math.c
 DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/enc_ctx.c
 
