--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".cbmc-batch/aws-c-common"]
 	path = verification/cbmc/aws-c-common
 	url = https://github.com/awslabs/aws-c-common.git
+[submodule "verification/cbmc/templates"]
+	path = verification/cbmc/templates
+	url = https://github.com/awslabs/aws-templates-for-cbmc-proofs.git
